src/footer/Footer.css
#footer {
    position: absolute;
    overflow: hidden;
    width: 100%;
    height: 100%;
    bottom: 0;
}

#contact-details {
    width: 100%;
    height: 100px;
    position: absolute;
    background-color: #000;
    left: 0;
    bottom: -100px;
    transition: 0.3s ease-in-out;
}

#footer-trigger {
    position: absolute;
    width: 20vw;
    height: 4vw;
    bottom: -5px;
    left: 50%;
    transform: translate(-50%, 0);
    border: none !important;
    margin: 0;
    padding: 0;
    display: block;
}

